@@ -1,4 +1,5 @@
 Changes towards version 0.7:
+- Fixed compilation with Netplay disabled (bug #1091), from Sze Howe Koh
 - Fixed ship picking order after a simultaneous destruction, e.g.
   Shofixti picks last after Glory device (bugs #1087, #1088) - Alex
 - Game no longer locks up after quickly escaping melee (bug #1003) - Alex
